--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name="cashtracker.alibard.tm.com.activity.MainActivity"
+        <activity android:name="cashtracker.alibard.tm.com.activity.main.MainActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
