--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="cashtracker.alibard.tm.com.activity.StartActivity">
+        <activity android:name="cashtracker.alibard.tm.com.activity.start.StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
