--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ def  archLifecycleVersion = "1.0.0"
 def  archRoomVersion = "1.0.0"
 ext.dagger_version = "2.13"
 dependencies {
-    kapt 'com.android.databinding:compiler:3.0.1'
+    kapt "com.android.databinding:compiler:3.1.0-alpha04"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
