--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ def lastCommitNumber = getLastCommitNumber()
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '27.0.1'
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.tm.alibard.cashtracker"
         minSdkVersion 21
@@ -37,7 +37,7 @@ kapt {
 }
 def support_version = "26.0.1"
 
-def  archLifecycleVersion = "1.0.0"
+def  archLifecycleVersion = "1.1.0"
 def  archRoomVersion = "1.0.0"
 ext.dagger_version = "2.13"
 dependencies {
@@ -45,6 +45,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
+    compile "com.android.support:appcompat-v7:$support_version"
+    compile "com.android.support:design:$support_version"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
@@ -56,7 +58,6 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-auth:3.1.0'
     compile 'com.google.firebase:firebase-core:11.4.2'
     compile 'com.google.firebase:firebase-database:11.4.2'
-    compile 'com.android.support:appcompat-v7:26.1.0'
 
     // Reactive extension
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
